--- a/index.html
+++ b/index.html
@@ -266,13 +266,17 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Camelia acompaña el crecimiento con un plan por etapas: comenzás liviano y seguís sumando metros cuando la vida lo pida, siempre con el mismo look prolijo y moderno.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Camelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" target="_blank" rel="noopener">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/1.jpeg" target="_blank" rel="noopener">Plano 1</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/2.jpeg" target="_blank" rel="noopener">Plano 2</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/3.jpeg" target="_blank" rel="noopener">Plano 3</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/4.jpeg" target="_blank" rel="noopener">Plano 4</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop2Camelia/Planos/5.jpeg" target="_blank" rel="noopener">Plano 5</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -321,7 +325,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Belladona juega con alturas y ventanales para que el paisaje sea parte del interior; es la casa de fines de semana largos, reuniones grandes y atardeceres en la terraza.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -384,7 +388,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Bromelia es la opción urbana: entra en lotes ajustados, respira por el patio y mantiene el estilo limpio y cálido de toda la línea AMZ.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -443,7 +447,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Dionizia prioriza la luz natural y las vistas cruzadas: cada paso mira al patio y cada ambiente se conecta con la galería para vivir adentro y afuera sin esfuerzo.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -521,7 +525,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Amz I mezcla abrigo y diseño limpio: protege del viento, capta sol y ofrece un conjunto prolijo para renta turística o vivienda permanente.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -578,7 +582,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>Rio se vive adentro y afuera: el vidrio esquinero enmarca el verde y la galería acompaña cada reunión, ya sea un asado familiar o una tarde de trabajo remoto.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -639,7 +643,7 @@
             </div>
           </div>
           <div class="model__summary">
-            <p>El Quincho AMZ I tiene onda urbana: planta baja flexible para asados, fiestas o coworking y dormitorios arriba para dormir en silencio después de todo.</p>
+            <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
