--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
           <span class="btn__text">Escribinos</span>
         </a>
         <a href="https://www.amazoniaamz.com/" class="btn btn--contact">
-          <span class="btn__icon"></span>
+          <span class="btn__icon">🌐</span>
           <span class="btn__text">Sitio web</span>
         </a>
       </div>
