Adjust header navigation alignment

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
       <div class="page-title">PORTFOLIO</div>
 
-      <nav class="nav">
+      <nav class="nav nav--links">
         <a href="#metodo" class="nav__link">Sistema AMZ</a>
         <a href="#metodo" class="nav__link">Muros AMZ</a>
         <a href="#modelos" class="nav__link">Modelos</a>
         <a href="#modelos" class="nav__link">Obras</a>
-        <a href="#contacto" class="nav__link nav__link--cta">Contactar</a>
       </nav>
+      <a href="#contacto" class="nav__link nav__link--cta nav__link--contact">Contactar</a>
     </div>
   </header>
 
