--- a/index.html
+++ b/index.html
@@ -11,20 +11,23 @@
 
   <header class="header">
     <div class="header__inner">
-      <a href="#obra" class="logo">
-        <img src="https://pruebasnb.cloud/Multimedia/Logo/amazonia logo.png" alt="Amazonia - Viviendas industrializadas" class="logo__image">
-        <span class="sr-only">Amazonia - Viviendas industrializadas</span>
-      </a>
-
       <div class="page-title">PORTFOLIO</div>
 
-      <nav class="nav nav--links">
-        <a href="#metodo" class="nav__link">Sistema AMZ</a>
-        <a href="#metodo" class="nav__link">Muros AMZ</a>
-        <a href="#modelos" class="nav__link">Modelos</a>
-        <a href="#modelos" class="nav__link">Obras</a>
-      </nav>
-      <a href="#contacto" class="nav__link nav__link--cta nav__link--contact">Contactar</a>
+      <div class="header__actions">
+        <nav class="nav nav--links">
+          <a href="#metodo" class="nav__link">Sistema AMZ</a>
+          <a href="#metodo" class="nav__link">Muros AMZ</a>
+          <a href="#modelos" class="nav__link">Modelos</a>
+          <a href="#modelos" class="nav__link">Obras</a>
+        </nav>
+
+        <a href="#obra" class="logo">
+          <img src="https://pruebasnb.cloud/Multimedia/Logo/amazonia logo.png" alt="Amazonia - Viviendas industrializadas" class="logo__image">
+          <span class="sr-only">Amazonia - Viviendas industrializadas</span>
+        </a>
+
+        <a href="#contacto" class="nav__link nav__link--cta nav__link--contact">Contactar</a>
+      </div>
     </div>
   </header>
 
