--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="hero__overlay"></div>
       <div class="hero__content">
-        <h1>Casas listas para habitar en 90 dias</h1>
+        <h1>Tu obra terminada en 90 dias</h1>
         <p>Proceso industrializado, control de calidad y diseno minimalista que deja hablar a la luz.</p>
       </div>
     </section>
