--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </div>
       <div class="hero__overlay"></div>
       <div class="hero__content">
-        <h1>Tu obra terminada en 90 dias</h1>
-        <p>Proceso industrializado, control de calidad y diseno minimalista que deja hablar a la luz.</p>
+        <h1>Tu obra terminada en 90 días</h1>
+        <p>Sistema Constructivo AMZ.</p>
       </div>
     </section>
 
