--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="hero__overlay"></div>
       <div class="hero__content">
         <h1>Tu obra terminada en 90 días</h1>
-        <p>Sistema Constructivo AMZ.</p>
+        <p>Sistema Constructivo AMZ</p>
       </div>
     </section>
 
