Update method section text layout

--- a/index.html
+++ b/index.html
@@ -54,86 +54,10 @@
           <p>Un proceso cerrado y repetible para reducir incertidumbre, costos y tiempos.</p>
         </div>
 
-        <div class="method__flow" aria-label="Etapas del proceso industrializado">
-          <div class="method__node">
-            <div class="method__number">01</div>
-            <div class="method__content">
-              <h3>Ingeniería ejecutiva</h3>
-              <p>Planos y especificaciones quedan aprobados antes de mover suelo.</p>
-            </div>
-          </div>
-          <div class="method__arrow" aria-hidden="true">→</div>
-          <div class="method__node">
-            <div class="method__number">02</div>
-            <div class="method__content">
-              <h3>Prefabricación</h3>
-              <p>Muros y canalizaciones se producen en planta con control de calidad.</p>
-            </div>
-          </div>
-          <div class="method__arrow" aria-hidden="true">→</div>
-          <div class="method__node">
-            <div class="method__number">03</div>
-            <div class="method__content">
-              <h3>Fundación</h3>
-              <p>Terreno listo para recibir el sistema estructural.</p>
-            </div>
-          </div>
-          <div class="method__arrow" aria-hidden="true">→</div>
-          <div class="method__node">
-            <div class="method__number">04</div>
-            <div class="method__content">
-              <h3>Montaje</h3>
-              <p>Paneles encastran en serie y el cierre perimetral queda operativo.</p>
-            </div>
-          </div>
-          <div class="method__arrow" aria-hidden="true">→</div>
-          <div class="method__node">
-            <div class="method__number">05</div>
-            <div class="method__content">
-              <h3>Cubierta y terminaciones</h3>
-              <p>Techo, aislaciones y acabados finales se instalan en secuencia corta.</p>
-            </div>
-          </div>
-          <div class="method__arrow" aria-hidden="true">→</div>
-          <div class="method__node">
-            <div class="method__number">06</div>
-            <div class="method__content">
-              <h3>Control de calidad</h3>
-              <p>Checklists y pruebas de hermeticidad aseguran desvíos mínimos.</p>
-            </div>
-          </div>
-          <div class="method__arrow" aria-hidden="true">→</div>
-          <div class="method__node">
-            <div class="method__number">07</div>
-            <div class="method__content">
-              <h3>Entrega y postventa</h3>
-              <p>Documentación completa y seguimiento para habitar desde el día uno.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="method__metrics">
-          <div class="method__metric">
-            <span class="method__metric-icon" aria-hidden="true">⚡</span>
-            <div>
-              <strong>Obra gris en 1 mes</strong>
-              <p>Plazos industriales con equipos coordinados desde fábrica.</p>
-            </div>
-          </div>
-          <div class="method__metric">
-            <span class="method__metric-icon" aria-hidden="true">⚡</span>
-            <div>
-              <strong>Llave en mano en 3 meses</strong>
-              <p>Menos retrabajo y menor variación en costos finales.</p>
-            </div>
-          </div>
-          <div class="method__metric">
-            <span class="method__metric-icon" aria-hidden="true">✓</span>
-            <div>
-              <strong>Aplicable a vivienda y proyectos mixtos</strong>
-              <p>Escalable a distintas tipologías sin perder trazabilidad.</p>
-            </div>
-          </div>
+        <div class="method__text" aria-label="Descripción del sistema constructivo">
+          <p>Nuestro sistema constructivo industrializado, basado en muros AMZ, permite desarrollar obras de manera eficiente y ordenada, resolviendo problemáticas habituales de la construcción convencional. A partir del proyecto se elabora un plano de ingeniería para la fabricación de los muros en planta industrial, incorporando las instalaciones de servicios durante el proceso y evitando intervenciones posteriores en obra.</p>
+          <p>En el terreno se ejecuta la fundación según el proyecto, seguida del montaje de los muros AMZ, su vinculación a la estructura portante, la colocación de la cubierta y las terminaciones finales. El sistema constructivo aporta aislación térmica y acústica, junto con una reducción significativa de tiempos, desperdicios y errores constructivos.</p>
+          <p>Aplicable a viviendas y a otros tipos de obras, permite plazos de ejecución acotados: obra gris en aproximadamente un mes y obra llave en mano en alrededor de tres meses.</p>
         </div>
       </div>
     </section>
