--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <section class="section section--method" id="metodo">
       <div class="method">
         <div class="method__intro">
-          <span class="label">Método AMZ</span>
-          <h2>Industria aplicada a la obra</h2>
-          <p>Un proceso cerrado y repetible para reducir incertidumbre, costos y tiempos.</p>
+          <span class="label"></span>
+          <h2>¿Como construimos con el sistema AMZ?</h2>
+          <p></p>
         </div>
 
         <div class="method__text" aria-label="Descripción del sistema constructivo">
