--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </div>
 
         <div class="method__text" aria-label="Descripción del sistema constructivo">
-          <p>Nuestro sistema constructivo industrializado, basado en muros AMZ, permite desarrollar obras de manera eficiente y ordenada, resolviendo problemáticas habituales de la construcción convencional. A partir del proyecto se elabora un plano de ingeniería para la fabricación de los muros en planta industrial, incorporando las instalaciones de servicios durante el proceso y evitando intervenciones posteriores en obra.</p>
-          <p>En el terreno se ejecuta la fundación según el proyecto, seguida del montaje de los muros AMZ, su vinculación a la estructura portante, la colocación de la cubierta y las terminaciones finales. El sistema constructivo aporta aislación térmica y acústica, junto con una reducción significativa de tiempos, desperdicios y errores constructivos.</p>
+          <p>Nuestro sistema constructivo industrializado, basado en muros AMZ, permite desarrollar obras de manera eficiente y ordenada, resolviendo problemáticas habituales de la construcción convencional.</p>
+          <p>A partir del proyecto se elabora un plano de ingeniería para la fabricación de los muros en planta industrial, incorporando las instalaciones de servicios durante el proceso y evitando intervenciones posteriores en obra.En el terreno se ejecuta la fundación según el proyecto, seguida del montaje de los muros AMZ, su vinculación a la estructura portante, la colocación de la cubierta y las terminaciones finales. El sistema constructivo aporta aislación térmica y acústica, junto con una reducción significativa de tiempos, desperdicios y errores constructivos.</p>
           <p>Aplicable a viviendas y a otros tipos de obras, permite plazos de ejecución acotados: obra gris en aproximadamente un mes y obra llave en mano en alrededor de tres meses.</p>
         </div>
       </div>
