--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <nav class="nav nav--links">
         <a href="#metodo" class="nav__link">Sistema AMZ</a>
-        <a href="#metodo" class="nav__link">Muros AMZ</a>
+        <a href="#muros" class="nav__link">Muros AMZ</a>
         <a href="#modelos" class="nav__link">Modelos</a>
         <a href="#modelos" class="nav__link">Obras</a>
       </nav>
@@ -58,6 +58,23 @@
           <p>Nuestro sistema constructivo industrializado, basado en muros AMZ, permite desarrollar obras de manera eficiente y ordenada, resolviendo problemáticas habituales de la construcción convencional.</p>
           <p>A partir del proyecto se elabora un plano de ingeniería para la fabricación de los muros en planta industrial, incorporando las instalaciones de servicios durante el proceso y evitando intervenciones posteriores en obra.En el terreno se ejecuta la fundación según el proyecto, seguida del montaje de los muros AMZ, su vinculación a la estructura portante, la colocación de la cubierta y las terminaciones finales. El sistema constructivo aporta aislación térmica y acústica, junto con una reducción significativa de tiempos, desperdicios y errores constructivos.</p>
           <p>Aplicable a viviendas y a otros tipos de obras, permite plazos de ejecución acotados: obra gris en aproximadamente un mes y obra llave en mano en alrededor de tres meses.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section--method" id="muros">
+      <div class="method">
+        <div class="method__intro">
+          <span class="label"></span>
+          <h2>¿Que son y para que se utilizan los Muros AMZ?</h2>
+          <p></p>
+        </div>
+
+        <div class="method__text" aria-label="Descripción de muros AMZ">
+          <p>Los muros MZ son fabricados en planta industrial conforme al proyecto y al desarrollo de ingeniería correspondiente. Aportan aislación térmica y acústica y permiten un alto nivel de control y precisión desde el inicio.</p>
+          <p>Durante su fabricación se incorporan las instalaciones de agua, gas, electricidad y desagües, evitando trabajos posteriores en obra. Al tratarse de un proceso industrializado, el sistema reduce desperdicios y permite una obra limpia y ordenada.</p>
+          <p>La tecnología aplicada en los muros permite eliminar revoques tradicionales, posibilitando la aplicación directa de pintura o del revestimiento final elegido, optimizando tiempos y recursos.</p>
+          <p>Los muros AMZ son una solución versátil, aplicable tanto a obras de cualquier tipo como a terminaciones de edificios, cerramientos y tapiales, adaptándose a distintas escalas y necesidades constructivas.</p>
         </div>
       </div>
     </section>
