--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="method">
         <div class="method__intro">
           <span class="label"></span>
-          <h2>¿Como construimos con el sistema AMZ?</h2>
+          <h2>¿Comó construimos con el Sistema AMZ?</h2>
           <p></p>
         </div>
 
@@ -66,7 +66,7 @@
       <div class="method">
         <div class="method__intro">
           <span class="label"></span>
-          <h2>¿Que son y para que se utilizan los Muros AMZ?</h2>
+          <h2>¿Qué son y para que se utilizan los Muros AMZ?</h2>
           <p></p>
         </div>
 
