--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@
           </div>
         </article>
 
-        <!-- CASA RIO -->
+        <!-- CASA PREMIUM -->
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Rio</h3>
+              <h3>Casa Premium</h3>
               <p class="model__headline">110 m2 · 3 dorm · 4 amb · 2 banos · Cochera abierta</p>
             </div>
             <span class="badge">L en patio</span>
@@ -515,10 +515,9 @@
             <div class="model__content">
               <div class="model__visual" data-interval="4100">
                 <div class="model__gallery">
-                <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Prop7/Render/alejandra-cifre-gonzalez-5nYLmG1m5lw-unsplash.jpg" alt="Casa Rio render exterior">
-                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7/Render/alejandra-cifre-gonzalez-ylyn5r4vxcA-unsplash.jpg" alt="Casa Rio render interior">
-                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7/Render/breno-assis-r3WAWU5Fi5Q-unsplash.jpg" alt="Casa Rio living">
-                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7/Render/terrah-holly-pmhdkgRCbtE-unsplash.jpg" alt="Casa Rio dormitorio">
+                <img class="slide active" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/1" alt="Casa Rio render exterior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/2" alt="Casa Rio render interior">
+                <img class="slide" src="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/3" alt="Casa Rio living">
                 </div>
               </div>
             </div>
@@ -530,13 +529,14 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Rio">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/Captura de Pantalla 2025-12-19 a la(s) 11.41.53.png" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Planos/Captura de Pantalla 2025-12-19 a la(s) 11.45.09.png" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
               <button class="btn media-dropdown__toggle" type="button">Ver video</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Videos de Casa Rio">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7/Videos/Video_Corto_de_Render_de_Casa.mp4" data-media-type="video">Recorrido principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop7Premium/Render/1" data-media-type="video">Recorrido principal</a>
               </div>
             </div>
           </div>
