Add legal disclaimer to model summaries

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -208,6 +209,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -267,6 +269,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -330,6 +333,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -389,6 +393,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -467,6 +472,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -523,6 +529,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
@@ -585,6 +592,7 @@
           </div>
           <div class="model__summary">
             <p>Disponible opción llave en mano (3 meses) y obra gris (1 mes).</p>
+            <p class="model__legal">La información publicada es orientativa y no constituye oferta contractual, sino una invitación a ofertar conforme al art. 973 del CCCN.</p>
           </div>
           <div class="model__actions">
             <div class="media-dropdown dropdown">
