Update Casa Camelia description

--- a/index.html
+++ b/index.html
@@ -166,20 +166,8 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Vivienda evolutiva industrializada</span>
-                <p class="description__headline">Una casa que nace completa y crece por etapas, manteniendo la misma estética y funcionalidad.</p>
-
-                <div class="description__body">
-                  <p>El esquema de crecimiento está previsto desde el inicio: se amplía la superficie manteniendo coherencia constructiva y un uso fluido de los ambientes.</p>
-                  <p>Incluye living–comedor, cocina, baño completo y dormitorios con espacios para placares, circulación clara y buena ventilación e iluminación. La galería semicubierta con asador se integra a la cocina, con lugar para lavarropas, mesada de apoyo y bacha exterior.</p>
-                  <p>Casa Camelia permite comenzar hoy y seguir ampliando cuando sea necesario mediante un sistema eficiente y planificado, sin obras disruptivas.</p>
-                </div>
-
-                <ul class="description__list">
-                  <li><strong>Casa Camelia 1 – Etapa inicial:</strong> 45 m² cubiertos con cocina, comedor, living, 1 dormitorio y baño completo. Galería semicubierta de 19 m² apta cochera.</li>
-                  <li><strong>Casa Camelia 2 – Primera ampliación:</strong> se suma un segundo dormitorio, alcanzando 58 m² cubiertos.</li>
-                  <li><strong>Casa Camelia 3 – Ampliación final:</strong> se incorpora un tercer dormitorio de 13 m² para totalizar 71 m² cubiertos.</li>
-                </ul>
+                <p>Casa Camelia es una vivienda evolutiva que permite comenzar con una casa de 1 dormitorio y, con el tiempo y según la necesidad del cliente, ampliarla a 2 o 3 dormitorios.</p>
+                <p>Las ampliaciones están previstas desde el proyecto original, por lo que el crecimiento se realiza de forma ordenada, coherente y sin modificaciones improvisadas, manteniendo la estética y la funcionalidad de la vivienda.</p>
               </div>
             </aside>
             <div class="model__content">
