--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 
     <section class="cta" id="contacto">
       <h2>¿Listo para construir?</h2>
-      <p>Contactanos y te asesoramos sobre la mejor alternativa para tu proyecto.</p>
+      <p>Contactános y te asesoramos sobre la mejor alternativa para tu proyecto.</p>
       <div class="cta__buttons">
         <a href="tel:+5493415217974" class="btn btn--contact">
           <span class="btn__icon">📞</span>
