--- a/index.html
+++ b/index.html
@@ -166,8 +166,21 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <p>Casa Camelia es una vivienda evolutiva que permite comenzar con una casa de 1 dormitorio y, con el tiempo y según la necesidad del cliente, ampliarla a 2 o 3 dormitorios.</p>
-                <p>Las ampliaciones están previstas desde el proyecto original, por lo que el crecimiento se realiza de forma ordenada, coherente y sin modificaciones improvisadas, manteniendo la estética y la funcionalidad de la vivienda.</p>
+                <p>Casa Camelia es una vivienda evolutiva que permite comenzar con una casa de 1 dormitorio y, con el tiempo y según la necesidad del cliente, ampliarla a 2 o 3 dormitorios.Las ampliaciones están previstas desde el proyecto original, por lo que el crecimiento se realiza de forma ordenada, coherente y sin modificaciones improvisadas, manteniendo la estética y la funcionalidad de la vivienda.</p>
+                <p>Etapas de crecimiento</p>
+                <p>
+                Casa Camelia 1 – Etapa inicial
+                45 m² cubiertos. Living–comedor, cocina, 1 dormitorio y baño completo.
+                Galería semicubierta con asador de 19 m², apta cochera.
+                </p > 
+                <p>Casa Camelia 2 – Primera ampliación
+                Incorpora un segundo dormitorio.
+                Superficie cubierta total: 58 m².
+                </p>
+                <p>Casa Camelia 3 – Ampliación final
+                Incorpora un tercer dormitorio.
+                Superficie cubierta total: 71 m².
+                </p>
               </div>
             </aside>
             <div class="model__content">
