--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
           <div class="model__head">
             <div>
               <h3>Casa Camelia</h3>
-              <p class="model__headline">45 m2 / 58m2 · 3 dorm · 4 amb · 2 banos · 2 autos</p>
+              <p class="model__headline">45 m2 / 58 m2 / 71 m2 </p>
             </div>
             <span class="badge">Familiar</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <p>Casa Camelia es una vivienda evolutiva que permite comenzar con una casa de 1 dormitorio y, con el tiempo y según la necesidad del cliente, ampliarla a 2 o 3 dormitorios.Las ampliaciones están previstas desde el proyecto original, por lo que el crecimiento se realiza de forma ordenada, coherente y sin modificaciones improvisadas, manteniendo la estética y la funcionalidad de la vivienda.</p>
+                <p>Casa Camelia es una vivienda evolutiva que permite comenzar con una casa de 1 dormitorio y, con el tiempo y según la necesidad del cliente, ampliarla a 2 o 3 dormitorios. Las ampliaciones están previstas desde el proyecto original, por lo que el crecimiento se realiza de forma ordenada, coherente y sin modificaciones improvisadas, manteniendo la estética y la funcionalidad de la vivienda.</p>
                 <p>Etapas de crecimiento</p>
                 <p>
                 Casa Camelia 1 – Etapa inicial
