--- a/index.html
+++ b/index.html
@@ -237,9 +237,9 @@
           <div class="model__head">
             <div>
               <h3>Casa Belladona</h3>
-              <p class="model__headline">160 m2 · 4 dorm · 6 amb · 3 banos · Garage lateral</p>
+              <p class="model__headline">75 m2 </p>
             </div>
-            <span class="badge badge--premium">Signature</span>
+            <span class="badge badge--premium">Familiar</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
@@ -247,7 +247,9 @@
                 <div class="description__body">
                   <p>Vivienda unifamiliar de planta compacta con espacios unificados, que integra living–comedor y cocina en un área continua y funcional. Presenta ventilación e iluminación, con puerta-balcón que vincula el espacio interior con la galería semicubierta, la cual puede utilizarse como espacio para guardado de vehículo.</p>
                   <p>Cuenta con dos dormitorios con espacios previstos para placares y baño completo, con una distribución que prioriza la funcionalidad y el aprovechamiento del espacio.</p>
-                  <p>Superficie total: 75 m². Superficie cubierta: 62 m². Superficie semicubierta: 13 m².</p>
+                  <p>Superficie total: 75 m²</p>
+                  <p>Superficie cubierta: 62 m²</p>
+                  <p>Superficie semicubierta: 13 m²</p>
                 </div>
               </div>
             </aside>
