Update AMZ premium housing description

--- a/index.html
+++ b/index.html
@@ -505,19 +505,22 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
-                <p class="description__headline">110 m² en L con 3 dormitorios y 2 baños.</p>
+                <span class="description__tag">AMZ Viviendas Premium</span>
+                <p class="description__headline">AMZ Viviendas Premium</p>
 
                 <div class="description__body">
-                  <p>Planta que abraza el patio con galería corrida y ventanal esquinero en el living.</p>
-                  <p>Suite con salida al jardín y un ambiente flexible para playroom u oficina.</p>
+                  <p>AMZ Viviendas Premium se desarrollan a partir de una planta baja cuidadosamente diseñada, que funciona como base arquitectónica del proyecto.</p>
+                  <p>La línea cuenta con dos modelos de planta baja definidos:</p>
                 </div>
 
                 <ul class="description__list">
-                  <li>Superficie: 110 m² cubiertos.</li>
-                  <li>Ambientes: 3 dormitorios, 2 baños.</li>
-                  <li>Galería en L y cochera abierta integrada al acceso.</li>
+                  <li>Planta Baja 1.1: 70,77 m²</li>
+                  <li>Planta Baja 1.2: 70,57 m²</li>
                 </ul>
+                <div class="description__body">
+                  <p>A partir de estas plantas bajas, la vivienda se completa con una planta alta seleccionada a medida, dentro de una línea de más de 10 modelos disponibles, con distintas distribuciones, superficies y cantidad de dormitorios.</p>
+                  <p>Para conocer las diferentes opciones de planta alta, contactanos.</p>
+                </div>
               </div>
             </aside>
             <div class="model__content">
