--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bromelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4/Planos/amsterdam-city-archives-9tmKEDz03uw-unsplash.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Planos/Imagen de WhatsApp 2025-12-17 a las 12.38.22_6d43f2fa.jpg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
