--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <div class="model__head">
             <div>
               <h3>Casa Belladona</h3>
-              <p class="model__headline">75 m2 </p>
+              <p class="model__headline">75 m2 · 2 dorm · 1 baño </p>
             </div>
             <span class="badge badge--premium">Familiar</span>
           </div>
@@ -298,12 +298,11 @@
               <h3>Casa Bromelia</h3>
               <p class="model__headline">78 m2 · 2 dorm · 3 amb · 2 banos · Descubierto</p>
             </div>
-            <span class="badge">Compacta</span>
+            <span class="badge">Familiar</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
                 <p class="description__headline">78 m² con 2 dormitorios, 2 baños y patio central.</p>
 
                 <div class="description__body">
@@ -343,7 +342,7 @@
             <div class="media-dropdown dropdown">
               <button class="btn btn--ghost media-dropdown__toggle" type="button">Ver planos</button>
               <div class="media-dropdown__menu dropdown-menu" aria-label="Planos de Casa Bromelia">
-                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Planos/Imagen de WhatsApp 2025-12-17 a las 12.38.22_6d43f2fa.jpg" data-media-type="plan">Plano principal</a>
+                <a class="media-dropdown__item" href="https://pruebasnb.cloud/Multimedia/Prop4Bromelia/Planos/Imagen de WhatsApp 2025-12-19 a las 15.34.02_e4386716.jpg" data-media-type="plan">Plano principal</a>
               </div>
             </div>
             <div class="media-dropdown dropdown">
@@ -498,16 +497,16 @@
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Premium</h3>
-              <p class="model__headline">110 m2 · 3 dorm · 4 amb · 2 banos · Cochera abierta</p>
+              <h3>Vivienda Premium AMZ</h3>
+              <p class="model__headline">170 m2</p>
             </div>
-            <span class="badge">L en patio</span>
+            <span class="badge">Premium</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">AMZ Viviendas Premium</span>
-                <p class="description__headline">AMZ Viviendas Premium</p>
+                
+                <p class="description__headline"></p>
 
                 <div class="description__body">
                   <p>AMZ Viviendas Premium se desarrollan a partir de una planta baja cuidadosamente diseñada, que funciona como base arquitectónica del proyecto.</p>
@@ -564,12 +563,12 @@
               <h3>Quincho AMZ I</h3>
               <p class="model__headline">86 m2 · 2 dorm · 3 amb · 2 banos · Sin cochera</p>
             </div>
-            <span class="badge">Duplex</span>
+            <span class="badge">Quincho</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
+                
                 <p class="description__headline">86 m² dúplex con 2 dormitorios y 2 baños.</p>
 
                 <div class="description__body">
