Actualiza descripcion de casa Dinizia

--- a/index.html
+++ b/index.html
@@ -366,19 +366,13 @@
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <span class="description__tag">Ficha rápida</span>
-                <p class="description__headline">140 m² con 3 dormitorios, 3 baños y patio vidriado.</p>
-
+                <p class="description__headline">DINIZIA: 137 m²</p>
                 <div class="description__body">
-                  <p>Planta en torno a un patio central que lleva luz y aire a cada rincón.</p>
-                  <p>Galería lineal y doble ingreso para separar el uso diario del social.</p>
+                  <p>Vivienda desarrollada en dos plantas, diseñada para terrenos en esquina, con cochera incorporada.</p>
+                  <p>En planta baja se dispone un espacio social amplio, con cocina integrada y living–comedor, un dormitorio y baño completo, organizados de forma funcional.</p>
+                  <p>En planta alta se desarrollan dos dormitorios y un segundo baño.</p>
+                  <p>La vivienda presenta una distribución equilibrada, circulaciones y una iluminación bien resuelta, con un aprovechamiento eficiente del terreno y correcta relación entre áreas sociales y privadas.</p>
                 </div>
-
-                <ul class="description__list">
-                  <li>Superficie total: 140 m².</li>
-                  <li>Ambientes: 3 dormitorios, 3 baños, galería y cochera doble.</li>
-                  <li>Patio interior que ordena circulaciones y ventila toda la casa.</li>
-                </ul>
               </div>
             </aside>
             <div class="model__content">
