--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <h3>Casa Camelia</h3>
               <p class="model__headline">45 m2 / 58 m2 / 71 m2 </p>
             </div>
-            <span class="badge">Familiar</span>
+            <span class="badge">Familiar-Evolutiva</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
@@ -298,7 +298,7 @@
               <h3>Casa Bromelia</h3>
               <p class="model__headline">78 m2 · 2 dorm · 3 amb · 2 banos · Descubierto</p>
             </div>
-            <span class="badge">Familiar</span>
+            <span class="badge">Familiar-Evolutiva</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
@@ -358,15 +358,14 @@
         <article class="model">
           <div class="model__head">
             <div>
-              <h3>Casa Dionizia</h3>
-              <p class="model__headline">140 m2 · 3 dorm · 5 amb · 3 banos · Cochera doble</p>
+              <h3>Casa Dinizia</h3>
+              <p class="model__headline">137 m2 · 3 dorm · 2 baños </p>
             </div>
-            <span class="badge">Luminosa</span>
+            <span class="badge">Familiar</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <p class="description__headline">DINIZIA: 137 m²</p>
                 <div class="description__body">
                   <p>Vivienda desarrollada en dos plantas, diseñada para terrenos en esquina, con cochera incorporada.</p>
                   <p>En planta baja se dispone un espacio social amplio, con cocina integrada y living–comedor, un dormitorio y baño completo, organizados de forma funcional.</p>
