Actualiza descripcion de Casa Bromelia

--- a/index.html
+++ b/index.html
@@ -296,25 +296,22 @@
           <div class="model__head">
             <div>
               <h3>Casa Bromelia</h3>
-              <p class="model__headline">78 m2 · 2 dorm · 3 amb · 2 banos · Descubierto</p>
+              <p class="model__headline">110 m² inicial · 170 m² con planta alta</p>
             </div>
             <span class="badge">Familiar-Evolutiva</span>
           </div>
           <div class="model__layout">
             <aside class="model__details">
               <div class="description">
-                <p class="description__headline">78 m² con 2 dormitorios, 2 baños y patio central.</p>
+                <p class="description__headline">Vivienda evolutiva.</p>
 
                 <div class="description__body">
-                  <p>Planta compacta que gira alrededor de un patio para sumar luz y ventilación cruzada.</p>
-                  <p>Social adelante, dormitorios al fondo y posibilidad de extender la galería.</p>
+                  <p>Superficie inicial: 110 m².</p>
+                  <p>Superficie total con planta alta: 170 m².</p>
+                  <p>Casa Bromelia es una vivienda evolutiva que permite construir una casa completa en planta baja y dejar prevista su ampliación futura en altura.</p>
+                  <p>En su etapa inicial cuenta con cocina, living–comedor, un dormitorio amplio, baño completo, galería semicubierta y espacio para cochera semicubierta. La planta baja incorpora además un ambiente previsto para futura escalera, que permite ampliar la vivienda sin intervenciones improvisadas.</p>
+                  <p>En su desarrollo en dos plantas, se incorporan en planta alta dos dormitorios y un baño, alcanzando una superficie total de 170 m², manteniendo coherencia funcional y constructiva.</p>
                 </div>
-
-                <ul class="description__list">
-                  <li>Superficie: 78 m² totales.</li>
-                  <li>Programa: 2 dormitorios + 2 baños.</li>
-                  <li>Patio interior para iluminar y ventilar todos los ambientes.</li>
-                </ul>
               </div>
             </aside>
             <div class="model__content">
